2009-01-20  Ryan Lortie  <desrt@desrt.ca>

	* daemon/gvfsbackendtrash.c: nail a couple of leaks

2009-01-20  Sebastien Bacher  <seb128@ubuntu.com>

	* common/Makefile.am: use glib where it is required

2009-01-19  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.4 ===

2009-01-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2009-01-13  Hans Petter Jansson  <hpj@novell.com>

	* client/gvfsfusedaemon.c (getattr_for_file)
	(vfs_open)
	(vfs_create)
	(vfs_rmdir)
	(vfs_access): Get only the attributes we require. This speeds up
	directory listings in particular, since we don't need to probe
	individual files to determine their MIME types.

2009-01-12  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/trashitem.c: don't insta-thaw deletes
	* daemon/gvfsbackendtrash.c: use a timeout to only call thaw() once
	per batch of delete method calls.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>

        * daemon/Makefile.am: Dist the dav+sd.mount.in file

2009-01-07  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendnetwork.c: (recompute_files):
	Remove unnecessary GError

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 1.1.3 ===

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* NEWS:
	Update for release

2009-01-06  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendnetwork.c:
	* daemon/gvfsbackendsmbbrowse.c:
	* daemon/smb-browse.mount.in:
	SMB browsing authentication support (#524485)
	Make smb-browse backend not automounted
	Mount smb root on network backend automount

2009-01-05  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/COPYING: include text of GPL3 by request of Vincent.

2008-12-30  Benjamin Otte  <otte@gnome.org>

	Bug 565504 - limited number of connections causes commands to fail

	* daemon/gvfsbackendftp.c: (g_vfs_backend_ftp_pop_connection):
	really fix this bug by not calling g_vfs_job_succeeded() on the error